--- a/conf/Proxool.properties
+++ b/conf/Proxool.properties
@@ -5,7 +5,7 @@ currentDataSource = ds1
 jdbc-1.proxool.alias=DBPool1
 jdbc-1.proxool.driver-class=com.mysql.jdbc.Driver
 
-jdbc-1.proxool.driver-url=jdbc:mysql://192.168.1.106:3306/voosky?useUnicode=true&characterEncoding=utf-8
+jdbc-1.proxool.driver-url=jdbc:mysql://localhost:3306/voosky?useUnicode=true&characterEncoding=utf-8
 
 jdbc-1.user=root
 jdbc-1.password=123456
