--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -52,7 +52,16 @@
 		<url-pattern>*.jsp</url-pattern>
 	</filter-mapping> -->
     
-    
+    <!-- 生成验证码 -->
+	<servlet>
+		<servlet-name>authImg</servlet-name>
+		<servlet-class>com.tmwrk.voosky.web.servlet.AuthImg</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>authImg</servlet-name>
+		<url-pattern>/authImg</url-pattern>
+	</servlet-mapping>
+	
 	<filter>
 		<filter-name>struts-cleanup</filter-name>
 		<filter-class>org.apache.struts2.dispatcher.ActionContextCleanUp</filter-class>
