--- a/conf/config.properties
+++ b/conf/config.properties
@@ -2,364 +2,5 @@
 threadpool.size=50
 serverType=VMware
 
-#qings/bf#
-environment=qings
 
-####adSysinfo#####
-adSysinfo.id=ID
-adSysinfo.systype=\u7CFB\u7EDF
-adSysinfo.ip=IP\u5730\u5740
-adSysinfo.hostname=\u4E3B\u673A\u540D
-adSysinfo.servertype=\u578B\u53F7
-adSysinfo.memsize=\u5185\u5B58(MB)
-#adSysinfo.machineserial
-#adSysinfo.cpunum
-adSysinfo.cpuspeed=CPU\u901F\u5EA6(MHZ)
-adSysinfo.cpucorenum=CPU\u6838\u6570
-adSysinfo.fcsnum=\u5149\u7EA4\u5361\u4E2A\u6570
-adSysinfo.entnum=\u7F51\u5361\u4E2A\u6570
-adSysinfo.oslevel=\u7CFB\u7EDF\u7248\u672C
-adSysinfo.time=\u65F6\u95F4
-#adSysinfo.serverlevel
-#adSysinfo.machineusage
-adSysinfo.zichuansn=\u8D44\u4EA7SN
-adSysinfo.sn=SN
-adSysinfo.gongyingshang=\u4F9B\u5E94\u5546
-adSysinfo.changshang=\u5382\u5546
-adSysinfo.mabegintime=MA\u5F00\u59CB\u65F6\u95F4
-adSysinfo.maendtime=MA\u7ED3\u675F\u65F6\u95F4
-adSysinfo.cpu_threshold=cpu\u9600\u503C(%)
-adSysinfo.memory_threshold=\u5185\u5B58\u9600\u503C(%)
-adSysinfo.filedisk_threshold=\u6587\u4EF6\u7CFB\u7EDF\u5C5E\u6027\u9600\u503C(%)
-adSysinfo.produceid=ProduceID
-adSysinfo.note=\u5907\u6CE8
-adSysinfo.site=\u4F4D\u7F6E
-
-
-########adWWN##########
-adWWN.id=ID
-adWWN.ip=IP
-adWWN.hostname= hostname
-adWWN.wwn= wwn
-adWWN.fcname= FCNAME
-adWWN.time = \u65F6\u95F4
-
-########adDfkinfo########
-adDfkinfo.id=ID
-adDfkinfo.ip=IP
-adDfkinfo.hostname=\u4E3B\u673A\u540D
-adDfkinfo.dfkinfo=\u78C1\u76D8\u4F7F\u7528\u7387
-
-########adStorage##########
-adStorage.id=ID
-adStorage.ip=IP
-adStorage.boxtype=\u578B\u53F7
-adStorage.boxsnraw=\u5E8F\u5217\u53F7
-#adStorage.boxtype=
-adStorage.boxmcode=\u5FAE\u7801
-adStorage.acapacity=\u5BB9\u91CF(G)
-adStorage.disktype=\u78C1\u76D8\u7C7B\u578B
-#adStorage.freedisknum
-adStorage.sdiskcapacity=\u5355\u76D8\u5BB9\u91CF(G)
-adStorage.disknum=\u78C1\u76D8\u4E2A\u6570
-#adStorage.boxsnraw
-#adStorage.boxname
-adStorage.time=\u65F6\u95F4
-adStorage.capacityused=\u5DF2\u4F7F\u7528(G)
-adStorage.freespace=\u5269\u4F59(G)
-adStorage.zichuansn=\u8D44\u4EA7SN
-adStorage.sn=SN
-adStorage.gongyingshang=\u4F9B\u5E94\u5546
-adStorage.changshang=\u5382\u5546
-adStorage.mabegintime=MA\u5F00\u59CB\u65F6\u95F4
-adStorage.maendtime=MA\u7ED3\u675F\u65F6\u95F4
-adStorage.produceid=ProduceID
-adStorage.note=\u5907\u6CE8
-adStorage.position=\u4F4D\u7F6E
-
-####adStorageWWN######
-adStorageWWN.id=ID
-adStorageWWN.ip=IP
-adStorageWWN.type=\u578B\u53F7
-adStorageWWN.boxsn=\u5E8F\u5217\u53F7
-adStorageWWN.dir=DIR
-adStorageWWN.port=PORT
-adStorageWWN.wwn=WWN
-adStorageWWN.boxsnraw=BOXSNRAW
-adStorageWWN.time=\u65F6\u95F4
-
-#######adSwitchSys######
-adSwitchSys.id=ID
-adSwitchSys.type=\u7C7B\u578B
-adSwitchSys.ip=IP
-adSwitchSys.swname=\u540D\u79F0(\u62D3\u6251)
-adSwitchSys.swtype=\u7C7B\u578B
-adSwitchSys.swsn=\u5E8F\u5217\u53F7
-adSwitchSys.swcode=\u5FAE\u7801
-#adSwitchSys.provider
-adSwitchSys.portnum=\u7AEF\u53E3\u6570
-adSwitchSys.porttype=\u7AEF\u53E3\u7C7B\u578B
-adSwitchSys.time=\u65F6\u95F4
-#adSwitchSys.domainid
-adSwitchSys.zichuansn=\u8D44\u4EA7SN
-adSwitchSys.sn=SN
-adSwitchSys.gongyingshang=\u4F9B\u5E94\u5546
-adSwitchSys.changshang=\u5382\u5546
-adSwitchSys.mabegintime=MA\u5F00\u59CB\u65F6\u95F4
-adSwitchSys.maendtime=MA\u7ED3\u675F\u65F6\u95F4
-adSwitchSys.produceid=ProduceID
-#adSwitchSys.auto
-adSwitchSys.note=\u5907\u6CE8
-adSwitchSys.position=\u4F4D\u7F6E
-
-########adSwitchinfo#######
-adSwitchinfo.id=ID
-adSwitchinfo.brand=BRAND
-adSwitchinfo.ip=IP
-adSwitchinfo.indexnum=IndexNum
-adSwitchinfo.slot=Slot
-adSwitchinfo.port=Port
-adSwitchinfo.wwn=WWN
-adSwitchinfo.swname=\u540D\u79F0
-adSwitchinfo.time=\u65F6\u95F4
-adSwitchinfo.state=State
-adSwitchinfo.wwnForIp=wwn\u5BF9\u5E94IP
-adSwitchinfo.linkedDevice=\u8FDE\u63A5\u8BBE\u5907
-
-
-######adZone#######
-adZone.id=ID
-adZone.zonename=ZoneNAME
-adZone.zonewwn=ZoneWWN
-adZone.zonetype=ZoneTYPE
-adZone.time=\u65F6\u95F4
-adZone.fabricip=FabricIP
-adZone.domain=DomainID
-adZone.port=Port
-adZone.state=State
-adZone.wwn=WWN
-adZone.switchIP=SwitchIP
-
-#########adFabric#######
-adFabric.id=ID
-adFabric.fabricip=Fabric
-adFabric.switchip=SwitchIP
-adFabric.domainid=DomainID
-adFabric.wwn=WWN
-#adFabric.fcip
-adFabric.switchname=SwitchName
-adFabric.time=\u65F6\u95F4
-
-##########cmDatabase#######
-cmDatabase.id=ID
-cmDatabase.db_username=\u6570\u636E\u5E93\u540D
-cmDatabase.db_password=\u6570\u636E\u5E93\u5BC6\u7801
-cmDatabase.db_ip=IP
-cmDatabase.db_instance=\u6570\u636E\u5E93\u5B9E\u4F8B
-cmDatabase.db_type=\u7C7B\u578B
-cmDatabase.threshold=Threshold
-cmDatabase.version=\u7248\u672C\u53F7
-cmDatabase.remark=\u5907\u6CE8
-
-#######cmServer#########
-cmServer.id=ID                  
-cmServer.sname=\u670D\u52A1\u5668\u540D\u79F0           
-cmServer.business=\u6240\u5C5E\u4E1A\u52A1\u7CFB\u7EDF
-cmServer.use_Desc=\u4F7F\u7528\u63CF\u8FF0           
-cmServer.status=\u72B6\u6001             
-cmServer.use=\u7528\u9014             
-cmServer.m_ip=\u7BA1\u7406IP
-cmServer.s_type=\u670D\u52A1\u5668\u7C7B\u522B           
-cmServer.domain=\u57DF\u6216\u5DE5\u4F5C\u7EC4            
-cmServer.fixed_AssetNo=\u56FA\u5B9A\u8D44\u4EA7\u53F7     
-cmServer.os_Info=\u64CD\u4F5C\u7CFB\u7EDF\u4FE1\u606F             
-cmServer.software_Type=\u8F6F\u4EF6\u7C7B\u578B     
-cmServer.software_Info=\u8F6F\u4EF6\u4FE1\u606F      
-cmServer.bs_Info=\u5907\u4EFD\u8F6F\u4EF6\u4FE1\u606F            
-cmServer.as_Info=\u6740\u6BD2\u8F6F\u4EF6\u4FE1\u606F           
-cmServer.others_Info=\u5176\u4ED6\u8F6F\u4EF6\u4FE1\u606F        
-cmServer.brand=\u54C1\u724C           
-cmServer.model=\u578B\u53F7        
-cmServer.serial_N=\u5E8F\u5217\u53F7         
-cmServer.cpu=cpu
-cmServer.memory=\u5185\u5B58           
-cmServer.hardware=\u786C\u76D8           
-cmServer.nic=\u7F51\u5361             
-cmServer.fiber_Card=\u5149\u7EA4\u5361         
-cmServer.cabinets_N=\u673A\u67DC        
-cmServer.u_num=u\u6570         
-cmServer.device_Provider=\u8BBE\u5907\u63D0\u4F9B\u5546   
-cmServer.service_Provider=\u670D\u52A1\u63D0\u4F9B\u5546  
-cmServer.service_Level=\u670D\u52A1\u7EA7\u522B    
-cmServer.service_EndDate=\u670D\u52A1\u7ED3\u675F\u65E5\u671F     
-cmServer.remark=\u5907\u6CE8
-
-##############cmMonitorServer############
-cmMonitorServer.id=ID
-cmMonitorServer.location=\u4F4D\u7F6E
-cmMonitorServer.model=\u8BBE\u5907\u578B\u53F7
-cmMonitorServer.conf_Desc=\u914D\u7F6E\u63CF\u8FF0
-cmMonitorServer.mac_Address=MAC\u5730\u5740
-cmMonitorServer.host_SN=\u4E3B\u673ASN
-
-##########cmDiskArray################
-cmDiskArray.id=ID 
-cmDiskArray.d_name=\u4E3B\u673A\u540D
-cmDiskArray.business=\u6240\u5C5E\u4E1A\u52A1\u7CFB\u7EDF
-cmDiskArray.status=\u72B6\u6001
-cmDiskArray.use=\u7528\u9014
-cmDiskArray.m_ip=\u7BA1\u7406IP
-cmDiskArray.fixed_AssetNo=\u56FA\u5B9A\u8D44\u4EA7\u53F7
-cmDiskArray.brand=\u54C1\u724C       
-cmDiskArray.model=\u578B\u53F7      
-cmDiskArray.serial_N=\u5E8F\u5217\u53F7
-cmDiskArray.disk_Num=\u78C1\u76D8\u6570\u91CF
-cmDiskArray.single_Capacity=\u5355\u76D8\u5BB9\u91CF    
-cmDiskArray.radi_Way=RADI\u65B9\u5F0F      
-cmDiskArray.phys_Total=\u7269\u7406\u603B\u5BB9\u91CF     
-cmDiskArray.avail_Total=\u53EF\u7528\u603B\u5BB9\u91CF      
-cmDiskArray.cabinets_N=\u673A\u67DC     
-cmDiskArray.u_num=U\u6570           
-cmDiskArray.device_Provider=\u8BBE\u5907\u63D0\u4F9B\u5546  
-cmDiskArray.service_Provider=\u670D\u52A1\u63D0\u4F9B\u5546   
-cmDiskArray.service_Level=\u670D\u52A1\u7EA7\u522B   
-cmDiskArray.service_EndDate=\u670D\u52A1\u7ED3\u675F\u65E5\u671F    
-cmDiskArray.remark=\u5907\u6CE8
-
-##########cmDiskTape##########
-cmDiskTape.id=ID
-cmDiskTape.t_name=\u4E3B\u673A\u540D
-cmDiskTape.business=\u6240\u5C5E\u4E1A\u52A1\u7CFB\u7EDFid
-cmDiskTape.status=\u72B6\u6001
-cmDiskTape.use=\u7528\u9014
-cmDiskTape.m_ip=\u7BA1\u7406IP
-cmDiskTape.brand=\u54C1\u724C
-cmDiskTape.model=\u578B\u53F7
-cmDiskTape.serial_N=\u5E8F\u5217\u53F7
-cmDiskTape.disk_Num=\u78C1\u76D8\u6570\u91CF
-cmDiskTape.single_Capacity=\u5355\u76D8\u5BB9\u91CF
-cmDiskTape.radi_Way=RADI\u65B9\u5F0F
-cmDiskTape.phys_Total=\u7269\u7406\u603B\u5BB9\u91CF
-cmDiskTape.avail_Total=\u53EF\u7528\u603B\u5BB9\u91CF
-cmDiskTape.tl_Type=\u78C1\u5E26\u5E93\u7C7B\u578B
-cmDiskTape.mh_Num=\u673A\u68B0\u624B\u6570\u91CF
-cmDiskTape.td_Type=\u78C1\u5E26\u673A\u7C7B\u578B
-cmDiskTape.td_Num=\u78C1\u5E26\u673A\u6570\u91CF
-cmDiskTape.cabinets_N=\u673A\u67DC
-cmDiskTape.u_num=U\u6570
-cmDiskTape.device_Provider=\u8BBE\u5907\u63D0\u4F9B\u5546
-cmDiskTape.service_Provider=\u670D\u52A1\u63D0\u4F9B\u5546
-cmDiskTape.service_Level=\u670D\u52A1\u7EA7\u522B
-cmDiskTape.service_EndDate=\u670D\u52A1\u7ED3\u675F\u65E5\u671F
-cmDiskTape.remark=\u5907\u6CE8
-
-##########cmFabricSwitch#########
-cmFabricSwitch.id=ID
-cmFabricSwitch.fs_Name=\u4E3B\u673A\u540D
-cmFabricSwitch.businessId=\u6240\u5C5E\u4E1A\u52A1\u7CFB\u7EDFid
-cmFabricSwitch.status=\u72B6\u6001
-cmFabricSwitch.use=\u7528\u9014
-cmFabricSwitch.m_ip=\u7BA1\u7406IP
-cmFabricSwitch.fixed_AssetNo=\u56FA\u5B9A\u8D44\u4EA7\u53F7
-cmFabricSwitch.brand=\u54C1\u724C
-cmFabricSwitch.model=\u578B\u53F7
-cmFabricSwitch.serial_N=\u5E8F\u5217\u53F7
-cmFabricSwitch.port_Num=\u7AEF\u53E3\u6570\u91CF
-cmFabricSwitch.cabinets_N=\u673A\u67DC
-cmFabricSwitch.u_num=U\u6570
-cmFabricSwitch.device_Provider=\u8BBE\u5907\u63D0\u4F9B\u5546
-cmFabricSwitch.service_Provider=\u670D\u52A1\u63D0\u4F9B\u5546
-cmFabricSwitch.service_Level=\u670D\u52A1\u7EA7\u522B
-cmFabricSwitch.service_EndDate=\u670D\u52A1\u7ED3\u675F\u65E5\u671F
-cmFabricSwitch.remark=\u5907\u6CE8
-
-############cmFsPort############
-cmFsPort.id =ID  
-cmFsPort.fsd_Name=\u4E3B\u673A\u540D
-cmFsPort.port_Name=\u7AEF\u53E3\u540D\u79F0
-cmFsPort.remote_Device_Name=\u5BF9\u7AEF\u8BBE\u5907\u540D\u79F0
-cmFsPort.business=\u5BF9\u7AEF\u670D\u52A1\u5668\u6240\u5C5E\u4E1A\u52A1\u7CFB\u7EDF
-cmFsPort.remark=\u5907\u6CE8
-
-#####cmNetwork######
-cmNetwork.id=ID
-cmNetwork.n_name=\u4E3B\u673A\u540D
-cmNetwork.device_Type=\u8BBE\u5907\u7C7B\u578B
-cmNetwork.network_Level=\u7F51\u7EDC\u5C42\u6B21
-cmNetwork.status=\u72B6\u6001
-cmNetwork.use=\u7528\u9014
-cmNetwork.m_ip=\u7BA1\u7406IP
-cmNetwork.fixed_AssetNo=\u56FA\u5B9A\u8D44\u4EA7\u53F7
-cmNetwork.brand=\u54C1\u724C
-cmNetwork.model=\u578B\u53F7
-cmNetwork.serial_N=\u5E8F\u5217\u53F7
-cmNetwork.port_Num=\u7AEF\u53E3\u6570\u91CF
-cmNetwork.cabinets_N=\u673A\u67DC
-cmNetwork.u_num=U\u6570
-cmNetwork.device_Provider=\u8BBE\u5907\u63D0\u4F9B\u5546
-cmNetwork.service_Provider=\u670D\u52A1\u63D0\u4F9B\u5546
-cmNetwork.service_Level=\u670D\u52A1\u7EA7\u522B
-cmNetwork.service_EndDate=\u670D\u52A1\u7ED3\u675F\u65E5\u671F
-cmNetwork.remark=\u5907\u6CE8
-
-##########cmNetworkPort############
-cmNetworkPort.id=ID
-cmNetworkPort.np_Name=\u4E3B\u673A\u540D
-cmNetworkPort.port_Name=\u7AEF\u53E3\u540D\u79F0
-cmNetworkPort.port_IP_Mask=\u7AEF\u53E3IP/\u63A9\u7801
-cmNetworkPort.belong_VLAN=\u6240\u5C5EVLAN
-cmNetworkPort.remote_Dev_Name=\u5BF9\u7AEF\u8BBE\u5907\u540D\u79F0
-cmNetworkPort.remote_Dev_IP=\u5BF9\u7AEF\u8BBE\u5907IP
-cmNetworkPort.businessId=\u5BF9\u7AEF\u670D\u52A1\u5668\u6240\u5C5E\u4E1A\u52A1\u7CFB\u7EDF
-
-######cmDataLine###########
-cmDataLine.line_ID=\u4E13\u7EBFID
-cmDataLine.dl_SerialNo=\u5E8F\u53F7
-cmDataLine.line_Name=\u4E13\u7EBF\u540D\u79F0
-cmDataLine.bandwidth=\u5E26\u5BBD
-cmDataLine.line_Type=\u4E13\u7EBF\u7C7B\u578B
-cmDataLine.remote_Node_Name=\u5BF9\u7AEF\u8282\u70B9\u540D\u79F0
-cmDataLine.serviceP_Name=\u670D\u52A1\u5546\u540D\u79F0
-cmDataLine.service_Use=\u670D\u52A1\u7528\u9014
-cmDataLine.contact=\u8054\u7CFB\u65B9\u5F0F
-
-########businessSystem###########3
-businessSystem.id=ID
-businessSystem.bs_Name=\u4E1A\u52A1\u7CFB\u7EDF\u540D\u79F0
-businessSystem.bs_Desc=\u4E1A\u52A1\u7CFB\u7EDF\u63CF\u8FF0
-businessSystem.user_Range=\u4F7F\u7528\u7528\u6237\u8303\u56F4
-businessSystem.peak_Period=\u4E1A\u52A1\u9AD8\u5CF0\u65F6\u95F4\u6BB5
-businessSystem.business_Contact=\u4E1A\u52A1\u8054\u7CFB\u4EBA
-businessSystem.contact=\u8054\u7CFB\u65B9\u5F0F
-businessSystem.department=\u6240\u5728\u90E8\u95E8
-businessSystem.software_Developer=\u8F6F\u4EF6\u5F00\u53D1\u5546
-businessSystem.system_Architecture=\u7CFB\u7EDF\u67B6\u6784
-businessSystem.remark=\u5907\u6CE8
-
-#########cmOtherDevice#############
-cmOtherDevice.id=ID
-cmOtherDevice.od_Type=\u7C7B\u522B
-cmOtherDevice.dataLineId=\u4E13\u7EBF
-cmOtherDevice.fixed_AssetNo=\u56FA\u5B9A\u8D44\u4EA7\u53F7
-cmOtherDevice.cabinet_Location=\u673A\u67DC\u4F4D\u7F6E
-cmOtherDevice.protocol_Converters_Name=\u534F\u8BAE\u8F6C\u6362\u5668\u540D\u79F0
-cmOtherDevice.line_Source_Device=\u8FDB\u7EBF\u6E90\u7AEF
-cmOtherDevice.outlet_Dest_Device=\u51FA\u7EBF\u76EE\u7684\u7AEF\u8BBE\u5907
-cmOtherDevice.protocol_Converters_Color=\u534F\u8BAE\u8F6C\u6362\u5668\u989C\u8272
-
-########adConfChange#############
-adConfChange.id=ID
-adConfChange.time=\u53D8\u66F4\u65F6\u95F4
-adConfChange.ip=IP
-adConfChange.hostname=\u4E3B\u673A\u540D
-adConfChange.shuxing=\u53D8\u66F4\u9879
-adConfChange.beforevalue=\u53D8\u66F4\u524D\u7684\u503C
-adConfChange.aftervalue=\u53D8\u66F4\u540E\u7684\u503C
-
-########adPerformance##############
-adPerformance.recordTime = \u6700\u65B0\u65F6\u95F4
-adPerformance.ip = IP
-adPerformance.hostname = \u4E3B\u673A\u540D
-adPerformance.cpu = CPU(%)
-adPerformance.memory = \u5185\u5B58(%)
-adPerformance.ostype =\u64CD\u4F5C\u7CFB\u7EDF
+upload.drive.path=c://
