--- a/conf/Proxool.properties
+++ b/conf/Proxool.properties
@@ -9,6 +9,7 @@ jdbc-1.proxool.driver-url=jdbc:mysql://localhost:3306/voosky?useUnicode=true&cha
 
 jdbc-1.user=root
 jdbc-1.password=123456
+#jdbc-1.password=root
 jdbc-1.proxool.maximum-connection-count=500
 jdbc-1.proxool.minimum-connection-count=20
 jdbc-1.proxool.prototype-count=20
