--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -33,6 +33,23 @@
         <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
     </filter> 
     -->
+    <!-- 动态地址静态化 -->
+	<filter>
+		<filter-name>UrlRewriteFilter</filter-name>
+		<filter-class>org.tuckey.web.filters.urlrewrite.UrlRewriteFilter</filter-class>
+		<init-param>
+			<param-name>logLevel</param-name>
+			<param-value>WARN</param-value>
+		</init-param>
+	</filter>
+	<!-- 如果使用Urlrewrite，要指定filter-mapping的dispatcher方式 -->
+    <filter-mapping>
+       <filter-name>UrlRewriteFilter</filter-name>
+       <url-pattern>/*</url-pattern>
+       <dispatcher>REQUEST</dispatcher>
+       <dispatcher>FORWARD</dispatcher>
+    </filter-mapping>
+    
 	<filter>
         <filter-name>struts2</filter-name>
         <filter-class>com.tmwrk.voosky.web.filter.EditorStrutsFilter</filter-class>
@@ -41,6 +58,8 @@
     <filter-mapping>
         <filter-name>struts2</filter-name>
         <url-pattern>/*</url-pattern>
+       <dispatcher>REQUEST</dispatcher>
+       <dispatcher>FORWARD</dispatcher>
     </filter-mapping>
     
     <!-- <filter>
@@ -70,4 +89,7 @@
 	<listener>  
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>  
 	</listener>
+	
+	
+	
 </web-app>
